min images and add font-family to svg text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
           <img src="./src/img/z-logo-1.svg" alt="logo-1">
         </div>
         <div class="two">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 182.96 161.2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 182.96 161.2"
+            preserveAspectRatio="xMinYMin none"
+          >
             <defs>
               <style>
                 .cls-1{fill:#fff383;}.cls-1,.cls-2,.cls-3{fill-rule:evenodd;}.cls-2,.cls-4,.cls-7,.cls-8{fill:#9d231f;}.cls-3{fill:#fecc00;}.cls-5{fill:#d82d26;}.cls-6{fill:#ffed00;}.cls-7{font-size:35.21px;}.cls-7,.cls-8{font-family:PribambasUkr1;}.cls-8{font-size:26px;}
