--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="second_wrap__right">
           <h5 class="second_wrap__title">Щотижня</h5>
-          <p class="second_wrap__subtitle">Sony playstation PS 4 Pro</p>
+          <p class="second_wrap__subtitle">Sony playstation 4 Pro</p>
           <img src="./src/img/sony.png" alt="sony">
         </div>
       </div>
