--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <a class="title" data-toggle-wrap="#regForm" href="#">реєстрація на акцію</a>
             <form novalidate action="" id="regForm">
               <div class="field">
-                <label for="form-name">ПІ</label>
+                <label for="form-name">Прізвище, ім'я</label>
                 <input type="text" name="name" id="form-name">
               </div>
               <div class="field">
@@ -132,10 +132,6 @@
                   <option value="1">Чоловіча</option>
                   <option value="2">Жіноча</option>
                 </select>
-              </div>
-              <div class="field">
-                <label for="form-region">Область, населений пункт</label>
-                <input type="text" name="region" id="form-region">
               </div>
               <div class="field">
                 <label for="form-email">Електронна адреса</label>
