--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <img src="./src/img/z-logo-1.svg" alt="logo-1">
         </div>
         <div class="two">
+          <p class="two_startEnd">
+            <span>01.03.2020</span> - <span>31.03.2020</span>
+          </p>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 182.96 161.21"
@@ -186,7 +189,6 @@
                 <label for="form-code">Акційний код</label>
                 <input type="text" name="code" id="form-code">
               </div>
-
               <input class="btn" type="submit" value="Зареєструватись">
             </form>
           </li>
