form opened all time

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
       <div class="third_wrap">
         <ul class="third_wrap__list">
           <li class="toggle">
-            <a class="title" data-toggle-wrap="#regForm" href="#">реєстрація на акцію</a>
-            <form novalidate action="" id="regForm">
+            <a class="title active" data-toggle-wrap="#regForm" href="#">реєстрація на акцію</a>
+            <form novalidate action="" class="active" id="regForm">
               <div class="field">
                 <label for="form-name">Прізвище, ім'я</label>
                 <input type="text" name="name" id="form-name">
