--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 182.96 161.21"
-            preserveAspectRatio="xMinYMin none"
           >
             <defs>
               <style>
@@ -227,5 +226,33 @@
 <!--<script src="src/js/pageable.min.js"></script>-->
 <script src="src/js/fullpage.min.js"></script>
 <script src="src/js/index.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141758811-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141758811-2');
+</script>
+
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '206085883779153');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+               src="https://www.facebook.com/tr?id=206085883779153&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
 </body>
 </html>
