add meta Open Graph

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>zabijaka landing</title>
+  <title>Купуй сардельки - вигравай Iphone</title>
+  <meta name="description" content="Купуйте упаковку будь-яких сардельок ТМ «Забіяка», Фамільної майстерні «Забіяка&Забіяка», шукайте код на упаковці та реєструйте на сайті http://promo.zabijaka.ua/" />
+  <meta property="og:url" content="http://zabijakanew.firs.org.ua/landing/" />
+  <meta property="og:title" content="Купуй сардельки - вигравай Iphone" />
+  <meta property="og:description" content="Купуйте упаковку будь-яких сардельок ТМ «Забіяка», Фамільної майстерні «Забіяка&Забіяка», шукайте код на упаковці та реєструйте на сайті" />
+  <meta property="og:image" content="http://zabijakanew.firs.org.ua/landing/src/img/meta.jpg" />
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
