scroll in sails rules

--- a/index.html
+++ b/index.html
@@ -199,7 +199,17 @@
           <li class="toggle">
             <a class="title" data-toggle-wrap="#officialRules" href="#">офіційні правила акції</a>
             <div class="toggle_wrap" id="officialRules">
-              <p>
+              <p class="scrollWrapper">
+                <span id="scrollBtnPrev" class="scrollBtn top"></span>
+                <span id="blockWithScroll" class="scroll">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
+                optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
+                suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
+                molestias mollitia nesciunt placeat praesentium quasi recusandae unde ut! Accusantium alias aliquam
+                aliquid deserunt, dignissimos doloremque ducimus, eaque eius eos hic id iure laudantium nam neque
+                obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
+                blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
+                architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
                 optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
                 suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
@@ -208,6 +218,65 @@
                 obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
                 blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
                 architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
+                optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
+                suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
+                molestias mollitia nesciunt placeat praesentium quasi recusandae unde ut! Accusantium alias aliquam
+                aliquid deserunt, dignissimos doloremque ducimus, eaque eius eos hic id iure laudantium nam neque
+                obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
+                blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
+                architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
+                optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
+                suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
+                molestias mollitia nesciunt placeat praesentium quasi recusandae unde ut! Accusantium alias aliquam
+                aliquid deserunt, dignissimos doloremque ducimus, eaque eius eos hic id iure laudantium nam neque
+                obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
+                blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
+                architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
+                optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
+                suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
+                molestias mollitia nesciunt placeat praesentium quasi recusandae unde ut! Accusantium alias aliquam
+                aliquid deserunt, dignissimos doloremque ducimus, eaque eius eos hic id iure laudantium nam neque
+                obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
+                blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
+                architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
+                optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
+                suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
+                molestias mollitia nesciunt placeat praesentium quasi recusandae unde ut! Accusantium alias aliquam
+                aliquid deserunt, dignissimos doloremque ducimus, eaque eius eos hic id iure laudantium nam neque
+                obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
+                blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
+                architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
+                optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
+                suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
+                molestias mollitia nesciunt placeat praesentium quasi recusandae unde ut! Accusantium alias aliquam
+                aliquid deserunt, dignissimos doloremque ducimus, eaque eius eos hic id iure laudantium nam neque
+                obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
+                blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
+                architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
+                optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
+                suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
+                molestias mollitia nesciunt placeat praesentium quasi recusandae unde ut! Accusantium alias aliquam
+                aliquid deserunt, dignissimos doloremque ducimus, eaque eius eos hic id iure laudantium nam neque
+                obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
+                blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
+                architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab assumenda consequuntur harum magni, minima
+                optio porro possimus, qui quod repellendus, repudiandae saepe voluptatem voluptates! Cum ipsa porro quae
+                suscipit voluptate. Aliquam aperiam cum, doloremque eius et expedita hic incidunt inventore ipsum
+                molestias mollitia nesciunt placeat praesentium quasi recusandae unde ut! Accusantium alias aliquam
+                aliquid deserunt, dignissimos doloremque ducimus, eaque eius eos hic id iure laudantium nam neque
+                obcaecati odio, perferendis quae qui ratione reiciendis rerum voluptate voluptatem voluptates. Accusamus
+                blanditiis consequuntur doloremque id incidunt officia quia, ullam. Adipisci, aliquam animi aperiam
+                architecto autem incidunt ipsum necessitatibus possimus, quos voluptas voluptatum?
+                </span>
+                <span id="scrollBtnNext" class="scrollBtn bottom"></span>
+              </p>
             </div>
           </li>
           <li>
@@ -229,6 +298,7 @@
 </main>
 
 <!--<script src="src/js/pageable.min.js"></script>-->
+<script src="src/js/jquery-3.4.1.min.js"></script>
 <script src="src/js/fullpage.min.js"></script>
 <script src="src/js/index.js"></script>
 
